# 3ds-tsa-python

./: 03 Introduction to Time Series.ipynb  03_intro_to_time_series.py  04 Creating a Time Series Object in Python.ipynb  04 Updating the Dataset.ipynb  04_create_time_series_object.py  04_update_dataset.py  05 Working with Time Series in Python.ipynb  07 The AR Model - Prices.ipynb  07 The AR Model - Returns.ipynb  08 The MA Model.ipynb  pyproject.toml
tests/: test_model_generator.py
tools/: metrics_generator.py  model_generator.py
