[project]
name = "time-series-analysis-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=7.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
