[project]
name = "time-series-analysis-python"
version = "0.1.0"
description = "365 Data Science Time Series Analysis project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=7.2.0",
    "marimo>=0.15.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "python-lsp-server>=1.13.1",
    "ruff>=0.12.11",
]

[tool.marimo.language_servers.pylsp]
enabled = true
